footer scrolling bug fixed, navigation text-align property corrected

--- a/sass/mainstyle-alt.scss
+++ b/sass/mainstyle-alt.scss
@@ -114,6 +114,7 @@ $init-delay: 0.05s;
 /* landing loading page */
 
 .loading-screen {
+    padding: 2em;
     position:fixed;
     top: 0;
     left: 0;
@@ -153,11 +154,12 @@ $init-delay: 0.05s;
 
 /* base styling */
 body {
-    background: $bgcolor;
+    background: darken($bgcolor-alt, 80%);
     min-width: 300px;
     max-width:1000px;
     width: auto;
     margin: 0 auto;
+    padding: 1em auto;
     font-family:$text-font;
     font-weight: 100;
     font-size: 16px;
@@ -197,12 +199,14 @@ section p {
 header {
     margin:0 auto;
     text-align: center;
+    background: $bgcolor;
 }
 
 img {
     width:50%;
     height:20%;
-    margin: 0.3em auto;
+    padding-top: 0.5em;
+    margin: 0.75em auto;
     display:block;
     object-fit:contain;
     background-color:$bgcolor;
@@ -444,6 +448,7 @@ footer {
     text-align:left;
     color: $txtcolor-footer;
     font-size: 0.8em; 
+    padding-bottom: 1em;
 }
 
 footer h4 {
@@ -488,7 +493,7 @@ footer .icon::before {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    align-text: center;
+    text-align: center;
 }
 
 .navigation a i {
@@ -505,7 +510,6 @@ footer .icon::before {
     height: 15rem;
     background-color: black;
     position: relative;
-    top: 2em;
     z-index: -1;
 }
 
@@ -513,7 +517,10 @@ footer .icon::before {
     width: auto;
     height: auto;
     padding: 1em;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: relative;
+    top: -2em;
     display: flex;
     flex-flow: column nowrap;
     align-content: flex-start;
@@ -695,7 +702,7 @@ footer .icon::before {
     img {
         width: 25%;
         height: 10%;
-        margin: 0.5em 0.3em;
+        margin: 0 0.3em 0.5em;
     }
 
     #mapicon {
@@ -742,7 +749,6 @@ footer .icon::before {
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
-        padding-bottom: 1em;
     }
 
     footer>h4 {
